@@ -57,6 +57,8 @@
 
 <UL>
   <LI> GraphicsMagick 1.0.2 released.
+  <LI> coders/x.c (RegisterXImage): Only register the X coder if HasX11
+        is defined.<BR>
   <LI> libxml/libxml2.def: Since VisualMagick configure is not fixed
         yet, add "LIBRARY CORE_RL_libxml_.dll" to the top of the file to
         at least cover the release build case.
