@@ -1,6 +1,8 @@
 2003-06-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* GraphicsMagick 1.0.2 released.
+	* coders/x.c (RegisterXImage): Only register the X coder if HasX11
+	is defined.
 	* libxml/libxml2.def: Since VisualMagick configure is not fixed
 	yet, add "LIBRARY CORE_RL_libxml_.dll" to the top of the file to
 	at least cover the release build case.
